--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "project1",
+  "name": "devSassy.github.io",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -8,14 +8,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Shweta-21/Project1.git"
+    "url": "https://github.com/devSassy/devSassy.github.io"
   },
   "author": "Shweta Sharma",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/Shweta-21/Project1/issues"
+    "url": "https://github.com/devSassy/devSassy.github.io/issues"
   },
-  "homepage": "https://github.com/Shweta-21/Project1#readme",
+  "homepage": "https://github.com/devSassy/devSassy.github.io#readme",
   "devDependencies": {
     "gulp": "^4.0.2",
     "gulp-concat": "^2.6.1",
